--- a/SisMaper/Views/ViewGerarParcelas.xaml
+++ b/SisMaper/Views/ViewGerarParcelas.xaml
@@ -3,8 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SisMaper.Views"
-        xmlns:viewModel="clr-namespace:SisMaper.ViewModel"
         xmlns:templates="clr-namespace:SisMaper.Views.Templates"
         mc:Ignorable="d"
         Title="Gerar Parcelas" 
@@ -27,7 +25,7 @@
             TextWrapping="Wrap"
             IsNegative="False"
             IsReadOnly="True"
-            Number="{Binding Fatura.ValorTotal}"
+            Number="{Binding ValorPendente, Mode=OneWay}"
             VerticalAlignment="Top"
             HorizontalAlignment="Left"
             BorderThickness="0"/>
