--- a/SisMaper/Views/ViewFatura.xaml
+++ b/SisMaper/Views/ViewFatura.xaml
@@ -165,7 +165,9 @@
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
                         Margin="10,10,0,0" 
-                        Command="{Binding NovaParcelaCmd}"/>
+                        Command="{Binding NovaParcelaCmd}"
+                        templates:HelperPopupToolTip.HelpHeader="Adicionar Parcela"
+                        templates:HelperPopupToolTip.HelpLink="GerenciamentoParcelas#AdicionarParcelas"/>
                     
                     <TextBox
                         IsEnabled="False"
@@ -212,14 +214,18 @@
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
                         Margin="96,10,0,0" 
-                        Command="{Binding EditarParcelaCmd}"/>
+                        Command="{Binding EditarParcelaCmd}"
+                        templates:HelperPopupToolTip.HelpHeader="Receber ou Editar Parcelas"
+                        templates:HelperPopupToolTip.HelpLink="GerenciamentoParcelas#ReceberParcelas"/>
                     <Button
                         Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
                         Content="Remover"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
                         Margin="172,10,0,0" 
-                        Command="{Binding ExcluirParcelaCmd}"/>
+                        Command="{Binding ExcluirParcelaCmd}"
+                        templates:HelperPopupToolTip.HelpHeader="Remover Parcela Selecionada"
+                        templates:HelperPopupToolTip.HelpLink="GerenciamentoParcelas#RemoverParcelas"/>
 
                     <Button
                         Style="{DynamicResource SisMaper.Button.OptionsButtonStyle}"
@@ -227,7 +233,9 @@
                         HorizontalAlignment="Right"
                         VerticalAlignment="Top"
                         Margin="0,10,10,0"
-                        Command="{Binding GerarParcelasCmd}">
+                        Command="{Binding GerarParcelasCmd}"
+                        templates:HelperPopupToolTip.HelpHeader="Gerar Parcelas"
+                        templates:HelperPopupToolTip.HelpLink="GerenciamentoParcelas#AdicionarParcelas">  
                     </Button>
 
                 </Grid>
@@ -281,7 +289,9 @@
                         Content="Remover"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Top"
-                        Margin="10,10,0,0" />
+                        Margin="10,10,0,0"
+                        templates:HelperPopupToolTip.HelpHeader="Remover Pedido Selecionado"
+                        templates:HelperPopupToolTip.HelpLink="Recebimento#RemoverPedidoFatura"/>
                 </Grid>
             </TabItem>
         </TabControl>
@@ -306,7 +316,9 @@
             VerticalAlignment="Top" 
             Background="white" 
             Focusable="false" 
-            Command="{Binding VerClienteCmd}" >
+            Command="{Binding VerClienteCmd}" 
+            templates:HelperPopupToolTip.HelpHeader="Visualizar Cliente"
+            templates:HelperPopupToolTip.HelpContent="Clique para ver informações do cliente">
             <StackPanel>
                 <iconpacks:PackIconMaterial Kind="AccountDetails" Width="22" Height="22"/>
             </StackPanel>
