--- a/SisMaper/Views/ViewRecebimentos.xaml
+++ b/SisMaper/Views/ViewRecebimentos.xaml
@@ -36,7 +36,10 @@
                     Orientation="Horizontal">
                     <Button
                         Style="{DynamicResource Button1}"
-                        Command="{Binding EditarFaturaCmd}">
+                        Command="{Binding EditarFaturaCmd}"
+                        templates:HelperPopupToolTip.HelpHeader="Alterar Fatura"
+                        templates:HelperPopupToolTip.HelpContent="Visualizar e alterar a fatura selecionada"
+                        templates:HelperPopupToolTip.HelpLink="Recebimento#AlterarFatura">
                         <StackPanel>
                             <icons:PackIconModern
                                 Kind="EditBox"
@@ -61,23 +64,10 @@
                         Style="{DynamicResource TextBox.Search}"
                         Text="{Binding TextoFiltro, Delay=300, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                         Height="35"
-                        VerticalAlignment="Top">
-                        <TextBox.ToolTip>
-                            <StackPanel>
-                                <TextBlock
-                                    FontWeight="Bold"
-                                    Foreground="{DynamicResource MahApps.Brushes.Accent}"
-                                    Text="Filtro Avançado:" />
-                                <TextBlock>
-                                    <Run
-                                        Text="Insira o nome do Cliente para buscar" />
-                                </TextBlock>
-                                <TextBlock>
-                                    <Run
-                                        Text="Ou digite o número da Fatura" />
-                                </TextBlock>
-                            </StackPanel>
-                        </TextBox.ToolTip>
+                        VerticalAlignment="Top"
+                        templates:HelperPopupToolTip.HelpHeader="Filtro Avançado"
+                        templates:HelperPopupToolTip.HelpContent="Digite o nome de um cliente ou número de fatura"
+                        templates:HelperPopupToolTip.HelpLink="FiltroFaturas">
                     </TextBox>
                     <ComboBox
                         x:Name="FiltrarTipoRecebimento"
@@ -90,7 +80,10 @@
                         SelectedItem="{Binding StatusSelecionado}"
                         mah:TextBoxHelper.ClearTextButton="True"
                         mah:TextBoxHelper.Watermark="Status"
-                        Height="39" />
+                        Height="39" 
+                        templates:HelperPopupToolTip.HelpHeader="Filtro por status"
+                        templates:HelperPopupToolTip.HelpContent="Selecione um status para filtrar as faturas"
+                        templates:HelperPopupToolTip.HelpLink="FiltroFaturas"/>
                     <DatePicker
                         FontSize="14"
                         HorizontalAlignment="Left"
@@ -101,7 +94,10 @@
                         mah:TextBoxHelper.Watermark="De"
                         mah:TextBoxHelper.UseFloatingWatermark="True"
                         VerticalContentAlignment="Center"
-                        Height="39" />
+                        Height="39" 
+                        templates:HelperPopupToolTip.HelpHeader="Filtro por Data"
+                        templates:HelperPopupToolTip.HelpContent="Selecione uma data inicial"
+                        templates:HelperPopupToolTip.HelpLink="FiltroFaturas"/>
                     <DatePicker
                         FontSize="14"
                         HorizontalAlignment="Left"
@@ -112,7 +108,10 @@
                         mah:TextBoxHelper.UseFloatingWatermark="True"
                         Width="121"
                         mah:TextBoxHelper.Watermark="Até"
-                        VerticalContentAlignment="Center" />
+                        VerticalContentAlignment="Center" 
+                        templates:HelperPopupToolTip.HelpHeader="Filtro por Data"
+                        templates:HelperPopupToolTip.HelpContent="Selecione uma data final"
+                        templates:HelperPopupToolTip.HelpLink="FiltroFaturas"/>
                     <TextBlock
                         HorizontalAlignment="Left"
                         Margin="172,12,0,0"
